# OpenWA

./: .env.example  .env.minimal  AGENT.md  CHANGELOG.md  Dockerfile  README.md  debug-engine-switch-monitor.md  debug-open-thread-history.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
.dbg/: trae-debug-log-whatsapp-no-effect.ndjson
.github/workflows/: release.yml
dashboard/: package-lock.json  package.json
dashboard/src/i18n/: index.ts
dashboard/src/pages/: Infrastructure.css  Infrastructure.tsx  Plugins.css  (+4 more)
docs/: 05-database-design.md  06-api-specification.md  07-api-collection.md  08-development-guidelines.md  12-troubleshooting-faq.md  13-horizontal-scaling.md  15-project-roadmap.md  22-n8n-integration.md  26-baileys-openwa-feature-mapping.md  27-project-blueprint.md  README.md  journal.md
sdk/: README.md
sdk/javascript/: README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  vitest.config.ts
sdk/php/: .gitignore  composer.json  phpunit.xml
sdk/python/: .gitignore  pyproject.toml
sdk/python/openwa/: __init__.py  _http.py  client.py  errors.py  types.py
sdk/python/openwa/resources/: __init__.py  catalog.py  channels.py  chats.py  contacts.py  groups.py  health.py  labels.py  messages.py  sessions.py  status.py  templates.py  webhooks.py
sdk/python/tests/: conftest.py  test_sdk.py
src/config/: configuration.spec.ts  configuration.ts  env-precedence.spec.ts  env-precedence.ts  swagger.config.ts
src/engine/: engine.factory.spec.ts  engine.factory.ts
test/: baileys-engine.e2e-spec.ts
(+97 files in other folders)
